fusion/vm2/vm-2-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fedora-vm2-appset
  labels:
    appname: fedora-vm2
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: 'true'
spec:
  to:
    kind: Service
    name: fedora-vm2-appset
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  wildcardPolicy: None

# Made with Bob
